# gbemulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TAGS
cmake/sdl2/: FindSDL2.cmake
gbemu/: main.c
include/: bus.h  cart.h  common.h  cpu.h  emu.h  ppu.h  timer.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  emu.c  ppu.c  timer.c
tests/: CMakeLists.txt  check_gbe.c
